DDSM_ws/log/build_2025-03-19_17-57-17/robot_nav/stderr.log
  File "/home/nvidia/ros2_ws/install/robot_nav/lib/python3.10/site-packages/robot_nav/odom_to_tf.py", line 123
    main() tracking
           ^^^^^^^^
SyntaxError: invalid syntax

